# investec-sapb-mcp

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  pytest.ini  server.py  swagger.json
investec_api/: __init__.py  client.py  exceptions.py
investec_api/models/: __init__.py  account.py  base.py  beneficiary.py  document.py  payment.py  profile.py  transaction.py  transfer.py
tests/: __init__.py  config.py  conftest.py  test_investec_api.py
