[project]
name = "investec-api-mcp"
version = "0.1.0"
description = "A typed Python wrapper for the Investec Open Banking API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.3.5",
    "mcp[cli]>=1.6.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-xdist>=3.5.0",
]

[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
